--- a/templates/door.html
+++ b/templates/door.html
@@ -32,6 +32,11 @@
 		      </span>
 		      <input type="text" class="form-control" name="link">
 		    </div>
+		    <br>
+		    其他(数据库信息等备注)：
+		    <div>
+		    	<textarea name="other" class="form-control"></textarea>
+		    </div>
 		  </form>
 	      </div>
 	      <div class="modal-footer">
@@ -73,12 +78,12 @@
 				url:"/{{keeperid}}/all",
 				columns:[{
 					sortable:true,
-					width:"10%",
+					width:"5%",
 					field:"id",
 					title:"ID"
 				},{
 					sortable:true,
-					width:"20%",
+					width:"15%",
 					field:"desc",
 					title:"描述"
 				},{
@@ -87,7 +92,11 @@
 					field:"link",
 					title:"链接"
 				},{
-					width:"20",
+					width:"20%",
+					field:"other",
+					title:"其他"
+				},{
+					width:"10",
 					field:"operation",
 					title:"操作"
 				}
@@ -117,5 +126,33 @@
 					}
 				})
 			});
+		}
+
+		function toggleThis(id){
+			$("#other-"+id).toggle();
+			$("#save-"+id).toggle();
+			text = $("#show-hide-"+id).html()
+			if(text == '显示'){
+				$("#show-hide-"+id).html("隐藏");
+			}else{
+				$("#show-hide-"+id).html("显示");
+			}
+		}
+
+
+		function saveEdit(id){
+			console.log(id)
+			$.ajax({
+				url:"/door/modify/"+id,
+				type:"post",
+				data:{"other":$("#other-"+id).val()},
+				success:function(data){
+					if(data.result){
+						layer.msg("修改成功");
+					}else{
+						layer.msg("修改失败:"+data.errorMsg);
+					}
+				}
+			})
 		}
 {% endblock %}
